Resize image and create thumbnail

--- a/functions/.env.local
+++ b/functions/.env.local
@@ -1,2 +1,7 @@
 THUMBNAIL_WIDTH=200
 THUMBNAIL_HEIGHT=200
+IMAGE_MAX_WIDTH=1000
+IMAGE_MAX_HEIGHT=1000
+SOURCE_FOLDER=upload
+RESIZE_FOLDER=resize
+THUMBNAIL_FOLDER=thumbnail
