--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,10 @@
   "dependencies": {
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "@google-cloud/storage": "^1.6.0",
+    "@google-cloud/vision": "^1.8.0",
+    "@google-cloud/firestore": "^3.4.1"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
